--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-bootstrap-v5==1.0.11
 django-crispy-forms==2.0
 django-extensions==3.2.1
 django-heroku==0.3.1
+django-on-heroku==1.1.2
 frozenlist==1.3.3
 idna==3.4
 multidict==6.0.4
@@ -22,6 +23,7 @@ packaging==23.0
 pdf2image==1.16.3
 Pillow==9.5.0
 psycopg2==2.9.6
+psycopg2-binary==2.9.6
 pycryptodome==3.17
 pypdf==3.7.0
 PyPDF2==3.0.1
