--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ cymem==2.0.7
 dj-database-url==1.3.0
 Django==4.2
 django-extensions==3.2.1
+django_on_heroku
 django-heroku==0.3.1
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
 idna==3.4
