--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.6.0
+bootstrap5
 blis==0.7.9
 catalogue==2.0.8
 certifi==2022.9.24
@@ -11,7 +12,7 @@ cymem==2.0.7
 dj-database-url==1.3.0
 Django==4.2
 django-extensions==3.2.1
-django_on_heroku
+django-on-heroku
 django-heroku==0.3.1
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
 idna==3.4
@@ -46,4 +47,3 @@ tzdata==2023.3
 urllib3==1.26.12
 wasabi==1.1.1
 whitenoise==6.4.0
-
