--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 asgiref==3.6.0
-bootstrap5
 blis==0.7.9
 catalogue==2.0.8
 certifi==2022.9.24
@@ -11,6 +10,7 @@ confection==0.0.4
 cymem==2.0.7
 dj-database-url==1.3.0
 Django==4.2
+django-bootstrap-v5
 django-extensions==3.2.1
 django-on-heroku
 django-heroku==0.3.1
