--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,89 @@
+aiohttp==3.8.4
+aiosignal==1.3.1
 asgiref==3.6.0
+async-timeout==4.0.2
+attrs==22.2.0
+beautifulsoup4==4.12.1
 blis==0.7.9
+cachetools==5.3.0
+camel-tools==1.5.2
 catalogue==2.0.8
-certifi==2022.9.24
-charset-normalizer==2.1.1
+certifi==2022.12.7
+charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
-colorgram.py==1.2.0
 confection==0.0.4
+crispy-bootstrap5==0.7
 cymem==2.0.7
+dill==0.3.6
 dj-database-url==1.3.0
 Django==4.2
-django-bootstrap-v5
+django-bootstrap-v5==1.0.11
+django-crispy-forms==2.0
 django-extensions==3.2.1
-django-on-heroku
 django-heroku==0.3.1
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
+django-on-heroku==1.1.2
+docopt==0.6.2
+editdistance==0.6.2
+emoji==2.2.0
+filelock==3.12.0
+frozenlist==1.3.3
+fsspec==2023.4.0
+future==0.18.3
+huggingface-hub==0.14.1
 idna==3.4
 Jinja2==3.1.2
+joblib==1.2.0
 langcodes==3.3.0
 MarkupSafe==2.1.2
+mpmath==1.3.0
+muddler==0.1.3
+multidict==6.0.4
 murmurhash==1.0.9
-numpy==1.23.3
+networkx==3.1
+numpy==1.24.3
+openai==0.27.4
 packaging==23.0
-pandas==1.5.0
+pandas==2.0.1
 pathy==0.10.1
-Pillow==9.2.0
+pdf2image==1.16.3
+Pillow==9.5.0
 preshed==3.0.8
 psycopg2==2.9.6
-pydantic==1.10.4
+psycopg2-binary==2.9.6
+pycryptodome==3.17
+pydantic==1.10.7
+pypdf==3.7.0
 PyPDF2==3.0.1
+pyrsistent==0.19.3
+pytesseract==0.3.10
 python-dateutil==2.8.2
-pytz==2022.2.1
-requests==2.28.1
+pytz==2023.3
+PyYAML==6.0
+regex==2023.3.23
+requests==2.28.2
+scikit-learn==1.2.2
+scipy==1.10.1
 six==1.16.0
 smart-open==6.3.0
-spacy==3.5.0
+soupsieve==2.4
+spacy==3.5.2
 spacy-legacy==3.0.12
 spacy-loggers==1.0.4
 sqlparse==0.4.3
-srsly==2.4.5
-thinc==8.1.7
-tqdm==4.64.1
+srsly==2.4.6
+sympy==1.11.1
+tabulate==0.9.0
+thinc==8.1.9
+threadpoolctl==3.1.0
+tokenizers==0.13.3
+torch==2.0.0
+tqdm==4.65.0
+transformers==4.28.1
 typer==0.7.0
-typing_extensions==4.4.0
+typing_extensions==4.5.0
 tzdata==2023.3
-urllib3==1.26.12
+urllib3==1.26.15
 wasabi==1.1.1
 whitenoise==6.4.0
+yarl==1.8.2
