--- a/requirements.txt
+++ b/requirements.txt
@@ -58,7 +58,7 @@ pyrsistent==0.19.3
 pytesseract==0.3.10
 python-dateutil==2.8.2
 pytz==2023.3
-PyYAML==6.0
+PyYAML==6.
 regex==2023.3.23
 requests==2.28.2
 scikit-learn==1.2.2
@@ -69,20 +69,4 @@ soupsieve==2.4
 spacy==3.5.2
 spacy-legacy==3.0.12
 spacy-loggers==1.0.4
-sqlparse==0.4.3
-srsly==2.4.6
-sympy==1.11.1
-tabulate==0.9.0
-thinc==8.1.9
-threadpoolctl==3.1.0
-tokenizers==0.13.3
-torch==2.0.0
-tqdm==4.65.0
-transformers==4.28.1
-typer==0.7.0
-typing_extensions==4.5.0
-tzdata==2023.3
-urllib3==1.26.15
-wasabi==1.1.1
-whitenoise==6.4.0
-yarl==1.8.2
+
